--- a/index.html
+++ b/index.html
@@ -19,6 +19,22 @@
 <title>Primo css</title>
 </head>
 <body>
+
+  <header>
+
+    <div class="logo">LOGO</div>
+
+    <nav>
+      <ul>
+        <li><a class="active" href="#">home</a></li>
+        <li><a href="#">chi siamo</a></li>
+        <li><a href="#">prodotti</a></li>
+        <li><a href="#">contatti</a></li>
+      </ul>
+    </nav>
+
+  </header>
+
   <!-- lo sitle inline va evitato il più posibile e "vince" su tutti -->
   <h1 style="color: green;">Primo CSS</h1>
   <h2>testo a destra</h2>
@@ -50,7 +66,10 @@
 
   <main>
     <div class="fattoria">
-
+      <div>
+        <h3>lorem ipsum</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis nisi magni aut ducimus sequi inventore, minus sint iure molestiae a quisquam nobis reiciendis est provident ex, ullam maxime natus facere.</p>
+      </div>
     </div>
 
     <div class="box primo">
